# reconhecimento-de-padroes

./: README.md  main.py  pyproject.toml
trabalho-1/: main.ipynb  main_2.ipynb
trabalho-1/relatorio/: documento.tex
trabalho-1/vertebral+column/: backup_resultados_trabalho1.json  backup_resultados_trabalho1.pkl  main.ipynb  main_3.ipynb
trabalho-2/: main.ipynb
trabalho-2/relatorio/: documento.tex
trabalho-3/: main.ipynb
